@@ -29,16 +29,18 @@ Cucumber::Rails::World.use_transactional_fixtures = true
 # of your scenarions, as this makes it hard to discover errors in your application.
 ActionController::Base.allow_rescue = false
 
+require 'cucumber'
 # Comment out the next line if you don't want Cucumber Unicode support
 require 'cucumber/formatter/unicode'
+require 'cucumber/webrat/element_locator' # Lets you do table.diff!(element_at('#my_table_or_dl_or_ul_or_ol').to_table)
+<% if framework == :rspec -%>
+require 'cucumber/rails/rspec'
+<% end -%>
 
 require 'webrat'
-require 'cucumber/webrat/element_locator' # Lets you do table.diff!(element_at('#my_table_or_dl_or_ul_or_ol').to_table)
-
+require 'webrat/core/matchers' 
 Webrat.configure do |config|
   config.mode = :rails
   config.open_error_files = false # Set to true if you want error pages to pop up in the browser
 end
 
-require 'cucumber/rails/rspec'
-require 'webrat/core/matchers'
