@@ -5,21 +5,22 @@ Spork.prefork do
   # Sets up the Rails environment for Cucumber
   ENV["RAILS_ENV"] = "cucumber"
   require File.expand_path(File.dirname(__FILE__) + '/../../config/environment')
+  require 'cucumber/rails/world'
  
-  require 'webrat'
-  require 'cucumber/webrat/element_locator' # Lets you do table.diff!(element_at('#my_table_or_dl_or_ul_or_ol').to_table)
- 
-  Webrat.configure do |config|
-    config.mode = :rails
-  end
- 
-  require 'webrat/core/matchers'
   require 'cucumber'
-
   # Comment out the next line if you don't want Cucumber Unicode support
   require 'cucumber/formatter/unicode'
-  require 'spec/rails'
+  require 'cucumber/webrat/element_locator' # Lets you do table.diff!(element_at('#my_table_or_dl_or_ul_or_ol').to_table)
+  <% if framework == :rspec -%>
   require 'cucumber/rails/rspec'
+  <% end -%>
+
+  require 'webrat'
+  require 'webrat/core/matchers' 
+  Webrat.configure do |config|
+    config.mode = :rails
+    config.open_error_files = false # Set to true if you want error pages to pop up in the browser
+  end
 end
  
 Spork.each_run do
