@@ -1,6 +1,7 @@
 == In Git
 
 === New Features
+* Upgrade Rails generator to set a dependency to Spork 0.7.2. (Aslak Hellesøy)
 * Installation via rubygems will print a message telling people to read this file. (Aslak Hellesøy)
 * Rotten cucumber alert on Rails if you upgrade your gem without regenerating with script/generate cucumber. (Aslak Hellesøy)
 
